--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -502,7 +502,9 @@
                     </div>
                 </div>
                 <div class="canvas-container">
-                    <div class="rendering-layout"></div>
+                    <div class="loading-render grey lighten-3">
+                        <div class="lds-hourglass loading-canvas"></div>
+                    </div>
                     <div id="3d" class="three-dimemsion">
                         <div class="title">3D</div>
                         <div id="my-lut-container" style="display:none;">
@@ -521,9 +523,6 @@
                         <div class="title ">Z-axis</div>
                     </div>
                     <div class="my-slider">
-                        <div class="slice-mode-layout grey lighten-3">
-                            <div class="lds-hourglass loading-canvas"></div>
-                        </div>
                         <div class="slice-slider hidden"></div>
                         <div class="slice-slider-nav-container hidden">
                             <i class="material-icons slider-control left">keyboard_arrow_left</i>
