fix point cloud

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -68,7 +68,7 @@
                 <div class="algorithm-button marching-cube">Marching Cube</div>
                 <div class="algorithm-button ray-casting">Ray Casting</div>
                 <div class="algorithm-button texture-based">Texture-based</div>
-                <div class="algorithm-button point-cloud">Point Cloud</div>
+                <div class="algorithm-button point-cloud">Sinh's Method</div>
                 <div class="algorithm-button slice-only">Slice Mode</div>
             </div>
         </div>
