--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -1510,6 +1510,10 @@ span.algorithm-name,
     left: 0;
 }
 
+.size-decrease {
+    margin-right: 10px;
+}
+
 .controller {
     display: flex;
     align-items: center;
@@ -1672,6 +1676,8 @@ span.algorithm-name,
     outline: 1.5px solid #FFF;
     width: 50%;
     height: 50%;
+    /* width: 100%;
+    height: 100%; */
 }
 
 .three-dimemsion .title {
