--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -263,7 +263,7 @@
                                             </div>
                                         </div>
                                         <div class="attribute-config sinh-setting marching-cube-setting hidden" style="padding-right:20px;">
-                                            <div class="vtk-color">
+                                            <div class="sinh-color">
                                                 <input class="vtk-color-picker jscolor {onFineChange:'pointColorPicker(this)'}" value="000000">
                                                 <a class="btn waves-effect waves-light blue random-color-button">Random</a>
                                             </div>
