--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -261,7 +261,7 @@
                                                 <input class="max-color-picker jscolor {onFineChange:'texturebasedUpdateMaxColor(this)'} ripple" value="ffffff">
                                             </div>
                                         </div>
-                                        <div class="attribute-config sinh-setting marching-cube-setting hidden" style="padding-right:20px;">
+                                        <div class="attribute-config sinh-setting hidden" style="padding-right:20px;">
                                             <div class="sinh-color">
                                                 <input class="vtk-color-picker jscolor {onFineChange:'pointColorPicker(this)'}" value="000000">
                                                 <a class="btn waves-effect waves-light blue random-color-button">Random</a>
