--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -1158,12 +1158,13 @@ span.algorithm-name,
 .opacity input[type="range"]::-webkit-slider-thumb {
     display: block;
     -webkit-appearance: none;
-    background-color: #66a6f9;
+    background-color: #2979FF;
     width: 17px;
     height: 17px;
     border-radius: 50%;
     cursor: pointer;
     transition: .3s ease;
+    margin-top: -7px;
 }
 
 .attribute-config input[type="range"]::-webkit-slider-thumb:active,
@@ -1175,7 +1176,7 @@ span.algorithm-name,
 .opacity input[type=range]::-moz-range-thumb {
     display: block;
     -webkit-appearance: none;
-    background-color: #66a6f9;
+    background-color: #2979FF;
     width: 17px;
     height: 17px;
     border-radius: 50%;
@@ -1482,7 +1483,8 @@ span.algorithm-name,
     margin-top: 10px;
 }
 
-.marching-cube-setting .jscolor {
+.marching-cube-setting .jscolor,
+.sinh-setting .jscolor {
     width: 100%;
     font-size: 14px;
     font-weight: 700;
@@ -1490,6 +1492,10 @@ span.algorithm-name,
     margin: 0;
     border: none;
     outline: none;
+}
+
+.sinh-setting .attribute {
+    font-size: 15px;
 }
 
 .ray-setting.hidden {
@@ -1508,8 +1514,8 @@ span.algorithm-name,
 }
 
 .ray-config [type="checkbox"].filled-in:checked+span:not(.lever):after {
-    border: 2px solid #66a6f9;
-    background-color: #66a6f9;
+    border: 2px solid #2979FF;
+    background-color: #2979FF;
 }
 
 .ray-lut.input-field.col label,
@@ -1522,6 +1528,25 @@ span.algorithm-name,
 .ray-lut,
 .ray-opacity {
     width: 70%;
+}
+
+.ray-algorithm .dropdown-content li>span,
+.ray-lut .dropdown-content li>span,
+.ray-opacity .dropdown-content li>span {
+    font-size: 16px;
+    color: #2979ff;
+    display: block;
+    line-height: 22px;
+    padding: 14px 16px;
+}
+
+.ray-algorithm input.select-dropdown,
+.ray-lut input.select-dropdown,
+.ray-opacity input.select-dropdown,
+.ray-algorithm input.select-dropdown:focus,
+.ray-lut input.select-dropdown:focus,
+.ray-opacity input.select-dropdown:focus {
+    border-bottom: 1px solid #2979ff;
 }
 
 .texture-setting {
@@ -1538,6 +1563,19 @@ span.algorithm-name,
 
 .size-decrease {
     margin-right: 10px;
+}
+
+.take-screenshot .dropdown-content li>span {
+    font-size: 16px;
+    color: #2979ff;
+    display: block;
+    line-height: 22px;
+    padding: 14px 16px;
+}
+
+.take-screenshot input.select-dropdown,
+.take-screenshot input.select-dropdown:focus {
+    border-bottom: 1px solid #2979ff;
 }
 
 .controller {
